[package]
name = "wallexerr"
version = "0.1.0"
edition = "2021"
authors = ["wildonion <abarmardeatashyne@gmail.com>"]
description = "Crypto Contract Wallets"
homepage = "https://github.com/wildonion/wallexerr/"
keywords = ["wallet", "rust", "crypto", "blockchain"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/wildonion/wallexerr/"

[dependencies]
serde = {version = "1", features = ["derive"] }
futures-util = "0.3"
serde_json = "1"
uuid = { version = "1", features = ["serde", "v4"] }
chrono = { version = "0.4", features = ["serde"] }
dotenv = "0.15"
bytes = { version = "1", features = ["serde"] }
hex = "0.4"
ring = "0.16.20"
rust-crypto = "0.2.36"
sha2 = "0.10.6"
rand = "0.8"
once_cell = "1.17.1"
secp256k1 = { version = "0.27.0", features = ["rand", "bitcoin-hashes-std"] }
tiny-keccak = "1.4"
web3 = "0.19.0"
themis = "0.14.0"
tiny-bip39 = "1.0.0"
clap = "4.4.2"



[lib]
# libraries don't have entry points, you can't run them,they're used for functionality sharing like binding a .wasm into js codes
# we need lib.rs and crate type of cdylib for none binary like .wasm, .so, .dylib and .dll files or for tests
crate-type = ["cdylib", "rlib"]
path = "src/lib.rs"
name = "crypter"


[profile.release]
panic = "abort"
opt-level = "z"
lto = true
codegen-units = 1
overflow-checks = true # panic on any overflow
