[package]
name = "wallexerr"
version = "0.3.0"
edition = "2021"
authors = ["wildonion <abarmardeatashyne@gmail.com>"]
description = "Crypto Contract Wallets"
homepage = "https://github.com/wildonion/wallexerr/"
keywords = ["ed25519", "secp256", "blockchain", "ecdsa", "web3"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/wildonion/wallexerr/"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = {version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
hex = "0.4"
ring = "0.17"
sha2 = "0.10"
once_cell = "1"
secp256k1 = { version = "0.28", features = ["rand"] }
web3 = "0.19.0"
themis = "0.14.0"
tiny-bip39 = "1.0.0"
tiny-keccak = { version = "2.0", features = ["sha3"] }
base64 = "0.21"
base58 = "0.2.0"
aes256ctr_poly1305aes = "0.2.0"



[lib]
# libraries don't have entry points, you can't run them,they're used for functionality sharing like binding a .wasm into js codes
# we need lib.rs and crate type of cdylib for none binary like .wasm, .so, .dylib and .dll files or for tests
crate-type = ["cdylib", "rlib"]
path = "src/lib.rs"
name = "wallexerr"


[profile.release]
panic = "abort"
opt-level = "z"
lto = true
codegen-units = 1
overflow-checks = true # panic on any overflow
